# lead-crawler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  serve-https.bat
.fablize/: goals.json  ledger.jsonl
.github/: CODEOWNERS
.github/workflows/: backend.yml  ci.yml  web.yml
alembic/: env.py
alembic/versions/: 5b7ef028de56_initial_schema.py  a1c4e8b2f6d3_add_crawl_target.py  a3f7c1d9e5b2_add_crawl_job_mode.py  a7c3e1d9f2b5_add_dedup_candidate.py  b2f4a1c9d3e7_add_email_validation_smtp.py  b3d9f1a7c2e8_add_review_claim.py  b4c7d1e8a2f9_add_discovery_cursor.py  c3a8e2f1b9d4_add_cost_ledger.py  c8d4e2a9f1b6_add_email_send_log.py  c9e4f2a7b1d3_add_rich_discovery_fields.py  d2e5f8a1c6b9_add_crawl_job.py  d5e1c7a4f2b8_add_auth_tables.py  e2b8d4f7a1c6_add_market_column.py  e6f2b8c1a3d9_add_review_selected.py  e9b1d4c7a2f5_add_entity_resolution_columns.py  f1a9c3d7b2e4_normalize_name_tier_country.py  f7a3d2e9c1b4_add_rbac_and_review_audit.py
docs/: PLAN.md  PRD-queue-claim-permanent.md  PRD-queue-filtered-claim.md  bypass-embed.md
leadcrawler/: __init__.py  cli.py  config.py  cost_ledger.py  dedup.py  emailrules.py  excel_format.py  importer.py  logging.py  models.py  outreach.py  region.py  reporting.py  schema.py  security.py  seed.py
leadcrawler/api/: __init__.py  admin.py  app.py  auth.py  dedup.py  schemas.py
leadcrawler/dedup_resolve/: __init__.py  golden.py  inline.py  inline_lexical.py  llm_judge.py  near_dup.py  report.py
leadcrawler/enrich/: __init__.py  emailapi.py  enricher.py  extract.py  headless.py  industry_classify.py  ocr.py  vision.py
leadcrawler/integrations/: __init__.py  notion.py
leadcrawler/pipeline/: __init__.py  background.py  run.py
tests/: conftest.py  test_admin.py  test_api.py  test_api_spa.py  test_claim.py  test_cli_dedup_merge.py  test_cli_web_ssl.py  test_config_schema.py  test_cost_ledger.py  test_countries.py  test_crawl_job.py  test_db.py  test_dedup.py  test_dedup_golden.py  test_dedup_inline.py  test_dedup_llm_judge.py  test_dedup_regno.py  test_dedup_report.py  test_dedup_workbench.py  test_discovery_cursor.py  test_domain_resolver.py  test_emailrules.py  test_enrich.py  test_excel_export.py  test_existence.py  test_importer.py  test_industry_backfill.py  test_industry_classify.py  test_inline_lexical.py  test_insane_fetcher.py  test_io_throughput.py  test_migration_country_rekey.py  test_near_dup.py  test_notion.py  test_outreach.py  test_pg_integration.py  test_pipeline.py  test_pipeline_discovery_parallel.py  test_pipeline_live_parallel.py  test_pipeline_parallel.py  (+17 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+63 files in other folders)
