[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lead-crawler"
version = "0.1.0"
description = "전 산업·전 기업 IR 연락처 추출 크롤러 + 검증 웹앱"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "structlog>=24.1",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "selectolax>=0.3",
    "dnspython>=2.6",
    "email-validator>=2.1",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
# 무거운 런타임 의존성(헤드리스/OCR/DB드라이버/웹/AI)은 단계적으로 설치.
crawl = ["playwright>=1.44"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
ai = ["anthropic>=0.40"]
db = ["psycopg[binary]>=3.1"]
# WAF 우회 임베드(Track A) — 벤더링된 insane-search 엔진 런타임 의존(curl_cffi 격자 등).
bypass = ["curl_cffi>=0.6", "beautifulsoup4>=4.12", "pyyaml>=6.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
schedule = ["apscheduler>=3.10"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
leadcrawler = "leadcrawler.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"
# 벤더링된 third-party 엔진(insane-search, MIT)은 무수정 핀 복사본 — 린트 제외(벤더 무결성).
extend-exclude = ["leadcrawler/sources/_bypass/engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["leadcrawler"]
